# MAESTRO-IoT

./: .gitignore  FINDINGS.md  HARDWARE_BENCHMARK.md  README.md  pyproject.toml
configs/: comparison_matrix.toml  hardware_heavy_4node_maestro.toml  hardware_heavy_4node_matter_thread.toml  hardware_heavy_disrupted_maestro.toml  hardware_heavy_disrupted_matter_thread.toml  hardware_heavy_maestro.toml  hardware_heavy_matter_thread.toml  hardware_maestro.example.toml  hardware_matter_thread.example.toml  hardware_real_maestro.toml  hardware_real_matter_thread.toml  validation.toml
firmware/: README.md
firmware/esp32_serial_benchmark_agent/: CMakeLists.txt  README.md
firmware/esp32_serial_benchmark_agent/main/: CMakeLists.txt  benchmark_agent.c
firmware/sensecap_indicator_monitor/: README.md  sensecap_indicator_monitor.ino
src/maestro_sim/: __init__.py  analysis.py  cli.py  config.py  drivers.py  hardware.py  hardware_config.py  models.py  policy.py  results.py  simulation.py  topology.py
tests/: test_hardware.py  test_policy.py  test_simulation.py
