[project]
name = "maestro-sim"
version = "0.1.0"
description = "Simulated proof-of-concept harness for MAESTRO Matter-over-Thread experiments"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "matplotlib>=3.10.7",
  "networkx>=3.5",
  "numpy>=2.3.3",
  "pandas>=2.3.2",
  "simpy>=4.1.1",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.4.2",
]

[project.scripts]
maestro-sim = "maestro_sim.cli:main"

[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/maestro_sim"]

[tool.pytest.ini_options]
testpaths = ["tests"]
